[package]
name = "gzipt-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
miniz_oxide = "0.7.1"
rayon = "1.7"
indicatif = {version = "0.17.6", features = ["rayon"]}
rand = "0.8.5"
once_cell = "1.18.0"
knn = "0.1.3"